--- a/assignment-4/src/Makefile
+++ b/assignment-4/src/Makefile
@@ -2,7 +2,9 @@ all:
 	gcc -c malloc/*.h
 	gcc -c malloc/*.c
 	gcc -c main.c
+	gcc -c unit_tests.c
 	gcc -Imalloc -o main.exe main.o memory_allocation.o
+	gcc -Imalloc -o unit_tests.exe unit_tests.o 
 
 
 clean:
